samples/_failures_safe/1761541340_4d2e77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d7f9fb6.c:2:2: error: expected ‘;’ before ‘typedef’
    2 | c
      |  ^
      |  ;
./samples/SAFE/__tmp_1d7f9fb6.c: In function ‘main’:
./samples/SAFE/__tmp_1d7f9fb6.c:165:9: error: expected declaration or statement at end of input
  165 |         printf("\nOperations:\n");
      |         ^~~~~~
./samples/SAFE/__tmp_1d7f9fb6.c:165:9: error: expected declaration or statement at end of input
